--- a/FriendsTest/Base.lproj/Main.storyboard
+++ b/FriendsTest/Base.lproj/Main.storyboard
@@ -67,13 +67,6 @@
                                     <action selector="signUp:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="sqc-hs-qTm"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VVc-zw-bgQ">
-                                <rect key="frame" x="27" y="413" width="123" height="34"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h4e-WD-kCr">
                                 <rect key="frame" x="42" y="293" width="76" height="30"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -84,20 +77,13 @@
                                     <action selector="sendFriendRequest:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="6JB-sb-Nw9"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y2X-q4-WTl">
-                                <rect key="frame" x="34" y="348" width="109" height="43"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Ph1-B3-TEz">
                                 <rect key="frame" x="171" y="305" width="188" height="334"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" restorationIdentifier="friendRequestCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="friendRequestCell" id="jXN-0Z-Aov">
-                                        <rect key="frame" x="0.0" y="0.0" width="188" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
+                                        <rect key="frame" x="-25" y="390" width="188" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jXN-0Z-Aov" id="Lgj-XK-JSF">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
@@ -116,8 +102,6 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="displayMe" destination="VVc-zw-bgQ" id="3cQ-hw-JT5"/>
-                        <outlet property="displayUsername" destination="Y2X-q4-WTl" id="NJC-kl-05Z"/>
                         <outlet property="email" destination="AWk-z3-U0h" id="bcr-qK-05a"/>
                         <outlet property="friendsRequestTable" destination="Ph1-B3-TEz" id="rDS-Bc-zqo"/>
                         <outlet property="password" destination="NWj-rL-vQQ" id="Xln-EM-AfD"/>
@@ -127,7 +111,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-434.5" y="553.5"/>
+            <point key="canvasLocation" x="-667.5" y="540.5"/>
         </scene>
     </scenes>
 </document>
